# Oz_mashiro

0106 py/: Chapter0508_과제.ipynb
0108 py/: Chaoter0116_task.ipynb
0109 PY/: Chapter1720_task.ipynb
0112 py/: Ch21_task.ipynb  Chapter0132_task.ipynb  Mini_Project_Hangman_정답예시.ipynb
0113 py/: Chapter01~41_task.ipynb  task_1.ipynb
0113 py/animals/: birds.py
0114 py/: Mini_Project_Acount 2.ipynb  task_1 (1).ipynb
0116 db/: 0116 DB sql.sql
0120 py/: bird2.py
0126 html/: 프로필 페이지.html
0127 html/: index.html
advanced_class/Day_one/: design pattern.md
advanced_class/Day_two/: coffice_machine.py  coke_machine.py  noodle_machine.py  vending_machine.py
advanced_class/day_four/: JWT토큰.md  py.py  추상팩토리.md
advanced_class/day_three/: factory_pay.py  pay.py  pay_factory.py  pays.py  simple_pay.py  팩토리메서드.md
advanced_class/day_two/: main.py  vending_machine.py  템플릿 메소드.md
live_fast_api/: README.md
live_fast_api/Day 2/: requirements.txt
live_fast_api/Day 3/: requirements.txt
live_fast_api/Day 5/: README.md  auth.py  database.py  main.py  models.py  schemas.py
nomal_class/0105 py/: Ch04_task(code).ipynb
nomal_class/0106 py/: Ch05_task.ipynb  level3.ipynb
nomal_class/0107 py/: Chaoter0113_task.ipynb  Chaper0913_task.ipynb
nomal_class/0108 py/: Ch14_task.ipynb  Chaoter0116_task.ipynb  Chaper1416_task.ipynb
nomal_class/0109 PY/: Ch17_task.ipynb  Chapter1720_task.ipynb
nomal_class/0112 py/: Mini_Project_Hangman.ipynb
nomal_class/0113 py/: mymath.py  task_1.ipynb
nomal_class/0119 db/: 0119 DB.sql
nomal_class/when2meet/: pyproject.toml
(+93 files in other folders)
